@@ -1,7 +1,7 @@
 //
 // HTMLForm.h
 //
-// $Id: //poco/1.4/Net/include/Poco/Net/HTMLForm.h#2 $
+// $Id: //poco/1.4/Net/include/Poco/Net/HTMLForm.h#3 $
 //
 // Library: Net
 // Package: HTML
@@ -59,6 +59,13 @@ class PartSource;
 class Net_API HTMLForm: public NameValueCollection
 	/// HTMLForm is a helper class for working with HTML forms,
 	/// both on the client and on the server side.
+	///
+	/// The maximum number of form fields can be restricted
+	/// by calling setFieldLimit(). This is useful to
+	/// defend against certain kinds of denial-of-service
+	/// attacks. The limit is only enforced when parsing
+	/// form data from a stream or string, not when adding
+	/// form fields programmatically. The default limit is 100.
 {
 public:
 	HTMLForm();
@@ -179,6 +186,20 @@ public:
 		/// Returns the MIME boundary used for writing
 		/// multipart form data.
 
+	int getFieldLimit() const;
+		/// Returns the maximum number of header fields
+		/// allowed.
+		///
+		/// See setFieldLimit() for more information.
+		
+	void setFieldLimit(int limit);
+		/// Sets the maximum number of header fields
+		/// allowed. This limit is used to defend certain
+		/// kinds of denial-of-service attacks.
+		/// Specify 0 for unlimited (not recommended).
+		///
+		/// The default limit is 100.
+
 	static const std::string ENCODING_URL;       /// "application/x-www-form-urlencoded"
 	static const std::string ENCODING_MULTIPART; /// "multipart/form-data"
 
@@ -192,6 +213,11 @@ private:
 	HTMLForm(const HTMLForm&);
 	HTMLForm& operator = (const HTMLForm&);
 
+	enum Limits
+	{
+		DFL_FIELD_LIMIT = 100
+	};
+
 	struct Part
 	{
 		std::string name;
@@ -200,6 +226,7 @@ private:
 	
 	typedef std::vector<Part> PartVec;
 	
+	int         _fieldLimit;
 	std::string _encoding;
 	std::string _boundary;
 	PartVec     _parts;
@@ -218,6 +245,12 @@ inline const std::string& HTMLForm::getEncoding() const
 inline const std::string& HTMLForm::boundary() const
 {
 	return _boundary;
+}
+
+
+inline int HTMLForm::getFieldLimit() const
+{
+	return _fieldLimit;
 }
 
 
